# VAD

./: FCNN_Xval_25_hamming.csv  MLP.py  MLP2.py  data_processing.py  gen_vitis_files.py  get_weights.py  inference.py  json_to_c.py  label_csv.py  pkl_to_pth.py  rename_files.py  split_csv.py  torch_to_onnx_or_tf.py  utils.py  vitis_ai_compilation.py  vitis_ai_quantization.py
models/: best_mlp_25_128_32_16_16_0.2_0.62_0.58.pkl  best_mlp_25_128_64_32_16_0.2_0.57_0.49.pkl  best_mlp_25_128_64_32_16_0.2_0.58_0.52.pkl  best_mlp_25_128_64_32_16_0.2_0.59_0.55.pkl  best_mlp_25_128_64_32_16_0.2_0.62_0.57.pkl  best_mlp_25_32_16_16_0.2_0.61_0.56.pkl  best_mlp_25_32_32_32_16_0.2_0.0_0.0.pkl  best_mlp_25_32_32_32_16_0.2_1.0_1.0.pkl  best_mlp_25_64_32_16_0.2_0.55_0.47.pkl  best_mlp_25_64_32_16_0.2_0.9999.pkl  best_mlp_25_64_32_16_0.2_1.0_1.0.pkl  best_mlp_25_64_32_16_0.3_0.9997.pkl  best_mlp_25_64_32_16_0.4_0.56_0.52.pkl  best_mlp_25_64_32_16_0.4_0.9995.pkl  best_mlp_25_64_32_16_0.5_0.9988.pkl  best_mlp_25_64_32_16_0.6_0.9768.pkl  best_mlp_25_64_32_16_0.7_0.8723.pkl  best_mlp_25_64_32_8_0.2_0.56_0.51.pkl  best_mlp_25_64_32_8_0.2_0.9997.pkl  best_mlp_25_64_32_8_0.3_0.9988.pkl  overall_best_model_0.9776.pkl  overall_best_model_0.9776.pth
results/: FCNN_Xval_25_hamming_comprehensive.csv  best_models_summary.csv  overall_best_config.txt
silero-vad/: silero-vad.ipynb  speech_timestamps.txt
weights/: CMakeLists.txt  DEPLOYMENT_GUIDE.md  compile_model.sh  model_inference.c  model_weights.c  model_weights.h  overall_best_model_0.json  vad_model_dpu.cpp
(+4 files in other folders)
